// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeInner  is high contrast mode enabled: false 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
>
  <body
    className="theme-switcher"
  />
</HelmetWrapper>
`;

exports[`ThemeInner  is high contrast mode enabled: true 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
>
  <body
    className="theme-switcher high-contrast-theme"
  />
</HelmetWrapper>
`;
